--- a/config/views.view.duplicate_of_about.yml
+++ b/config/views.view.duplicate_of_about.yml
@@ -7,12 +7,14 @@ dependencies:
     - field.storage.node.field_dynamic
     - field.storage.node.field_image
     - field.storage.node.field_imageright
+    - image.style.medium
     - taxonomy.vocabulary.pages
   content:
     - 'taxonomy_term:pages:206cce88-26fc-4ff8-bb85-29508f47cb21'
     - 'taxonomy_term:pages:48e38945-dd0c-49f3-9577-e3733ae6d9c5'
     - 'taxonomy_term:pages:5b9c4122-8266-4c46-ab12-982d616eeadd'
     - 'taxonomy_term:pages:6fac66fd-9274-4dc9-9d2a-cfb326d45fc7'
+    - 'taxonomy_term:pages:8184ea0d-576d-413b-9afb-78593e905cf5'
     - 'taxonomy_term:pages:a7260024-8d0a-4f38-8e52-cd4c915136c6'
     - 'taxonomy_term:pages:bb9eb367-530c-404a-858f-3d8677c3e7c9'
     - 'taxonomy_term:pages:c420ec71-5e08-4b8b-a888-eb891f1534b1'
@@ -968,6 +970,172 @@ display:
         - 'config:field.storage.node.field_dynamic'
         - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_imageright'
+  block_5:
+    display_plugin: block
+    id: block_5
+    display_title: Menu
+    position: 12
+    display_options:
+      display_extenders: {  }
+      fields:
+        field_dynamic:
+          id: field_dynamic
+          table: node__field_dynamic
+          field: field_dynamic
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+      defaults:
+        fields: false
+        filters: false
+        filter_groups: false
+        sorts: false
+        css_class: false
+        title: false
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
+        tid:
+          id: tid
+          table: taxonomy_index
+          field: tid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            - 11
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: textfield
+          limit: true
+          vid: pages
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+      css_class: menu
+      display_description: ''
+      title: 'Concession Menu '
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - user
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_dynamic'
   page_1:
     display_plugin: page
     id: page_1
@@ -1081,12 +1249,29 @@ display:
         filter_groups: false
         css_class: false
         title: true
+        sorts: false
       filter_groups:
         operator: AND
         groups:
           1: AND
       css_class: hours
       display_description: ''
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
@@ -1224,12 +1409,12 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
+            alter_text: true
             text: ''
-            make_link: false
-            path: ''
+            make_link: true
+            path: 'https://www.rcsports.com/Skates.htm'
             absolute: false
-            external: false
+            external: true
             replace_spaces: false
             path_case: none
             trim_whitespace: false
@@ -1265,7 +1450,7 @@ display:
           click_sort_column: target_id
           type: image
           settings:
-            image_style: ''
+            image_style: medium
             image_link: ''
           group_column: ''
           group_columns: {  }
