--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -28,6 +28,7 @@ module:
   filter: 0
   help: 0
   image: 0
+  image_link_attributes: 0
   inline_entity_form: 0
   layout_discovery: 0
   link: 0
@@ -49,6 +50,7 @@ module:
   menu_link_content: 1
   views: 10
   paragraphs: 11
+  linked_field: 100
   minimal: 1000
 theme:
   stark: 0
