--- a/config/core.entity_view_display.node.rightpicturecontentleft.default.yml
+++ b/config/core.entity_view_display.node.rightpicturecontentleft.default.yml
@@ -6,10 +6,12 @@ dependencies:
     - field.field.node.rightpicturecontentleft.field_dynamic
     - field.field.node.rightpicturecontentleft.field_image
     - field.field.node.rightpicturecontentleft.field_view_selection
+    - image.style.400x200
     - node.type.rightpicturecontentleft
   module:
     - field_layout
     - image
+    - image_link_attributes
     - layout_discovery
     - text
     - user
@@ -33,9 +35,15 @@ content:
     weight: 0
     label: hidden
     settings:
-      image_style: ''
+      image_style: 400x200
       image_link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      image_link_attributes:
+        advanced:
+          target: ''
+          class: ''
+          rel: ''
+        extended: 0
     type: image
     region: content
 hidden:
