--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,11 +1,11 @@
 uuid: b8ab7e40-7d70-4557-ba7c-6406b1203669
-name: Site-Install
+name: 'Skate World'
 mail: admin@example.com
 slogan: ''
 page:
   403: ''
   404: ''
-  front: /user/login
+  front: /home
 admin_compact_mode: false
 weight_select_max: 100
 langcode: en
