--- a/docker-compose.linux.yml
+++ b/docker-compose.linux.yml
@@ -3,7 +3,7 @@ services:
   cms:
     build:
       context: ./docker-src/cms
-    mem_limit: 512M
+    mem_limit: 2G
     volumes:
       - .:/var/www
     env_file: environment
@@ -17,7 +17,7 @@ services:
 
   db:
     image: mariadb:latest
-    mem_limit: 512M
+    mem_limit: 1G
     env_file: environment
     ports:
       - 3306:3306
@@ -29,7 +29,7 @@ services:
 
   memcache:
     image: memcached:latest
-    mem_limit: 128M
+    mem_limit: 256M
     environment:
       - MEMCACHED_SERVER=memcached:11211
     ports:
