--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./docker-src/cms
     container_name: cms
-    mem_limit: 512M
+    mem_limit: 2G
     ports:
       - 8080:80
       - 8443:443
@@ -22,7 +22,7 @@ services:
   db:
     image: mariadb:latest
     container_name: db
-    mem_limit: 512M
+    mem_limit: 1G
     env_file: environment
     ports:
       - 3306:3306
@@ -35,7 +35,7 @@ services:
   memcache:
     image: memcached:latest
     container_name: memcached
-    mem_limit: 128M
+    mem_limit: 256M
     environment:
       - MEMCACHED_SERVER=memcached:11211
     ports:
